--- a/HTML/home.html
+++ b/HTML/home.html
@@ -8,6 +8,9 @@
     <title>Home</title>
 </head>
 <body>
-    Hello world!
+    <div class="header">header</div>
+    <div class="search">search</div>
+    <div class="newBook">newBook</div>
+    
 </body>
 </html>
