--- a/HTML/calendar.html
+++ b/HTML/calendar.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <link rel="stylesheet" href="../CSS/calendar.css">
+    <link rel="stylesheet" href="../CSS/calendar/calendar.css">
+    <link rel="stylesheet" href="../CSS/calendar/status.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,6 +31,56 @@
                 <div class="day">토</div>
             </div>
             <div class="dates"></div>
+        </div>
+    </div>
+    <div class="status">
+        <div class="books">
+
+            <div id ="book">
+                <div class="detail">
+                    &lt;
+                </div>
+                <div class="prolong">
+                    연장
+                </div>
+            </div>
+
+            <div id ="book">
+                <div class="detail">
+                    &lt;
+                </div>
+                <div class="prolong">
+                    연장
+                </div>
+            </div>
+
+            <div id ="book">
+                <div class="detail">
+                    &lt;
+                </div>
+                <div class="prolong">
+                    연장
+                </div>
+            </div>
+
+            <div id ="book">
+                <div class="detail">
+                    &lt;
+                </div>
+                <div class="prolong">
+                    연장
+                </div>
+            </div>
+
+            <div id ="book">
+                <div class="detail">
+                    &lt;
+                </div>
+                <div class="prolong">
+                    연장
+                </div>
+            </div>
+            
         </div>
     </div>
         <script src="../JS/calendar.js"></script>
